--- a/server/pages/doctor.html
+++ b/server/pages/doctor.html
@@ -23,7 +23,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-buttons">
-            <a href="#">Button 1</a>
+            <a href="#">Patients</a>
             <a href="#">Button 2</a>
             <a href="#">Button 3</a>
             <a href="#">Button 4</a>
