added prescribtions and family members

--- a/server/pages/patient.html
+++ b/server/pages/patient.html
@@ -31,8 +31,8 @@
         <a href="searchDoctorSpeciality.html"
           >Search for a doctor by speciality</a
         >
-        <a href="#">Button 4</a>
-        <a href="#">Button 5</a>
+        <a href="viewFamilyMembers.html">View Your Family Members</a>
+        <a href="viewPrescribtions.html">View Your Prescribtions</a>
       </div>
     </div>
 
