--- a/react-app/clinic-frontend/public/index.html
+++ b/react-app/clinic-frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Khaleha-3la-allah Clinic</title>
   </head>
-  <body>
+  <body style="background-color: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
